# OpenSMSG

./: .gitignore  CMakeLists.txt
data/language/: en-US.txt
scripts/RetDec/: Decompile.sh  RetDec.py  Terrain.id0  Terrain.id1  Terrain.id2  Terrain.nam  key.txt
src/2d-game-engine/: CMakeLists.txt  Game.cpp  Game.h  TextureManager.h  main.cpp
src/3d-game-engine/: CMakeLists.txt  Game.cpp  Game.h  TextureManager.cpp
src/opensmsg/: CMakeLists.txt
src/opensmsg-core/: CMakeLists.txt  main.c  test.cpp
src/opensmsg-core/Image/: datatype.h  endianio.h  pcx.h  pcxdecod.c
src/opensmsg-core/Terrain/: Terrain.cpp  Terrain.h  Tile.cpp  Tile.h
src/opensmsg-core/Util/: ErrorLog.cpp  ErrorLog.h
src/opensmsg-core/audio/: sound.cpp  sound.h
src/opensmsg-terrain/: CMakeLists.txt  Terrain-Notes.md  Terrain.cpp  Terrain.h  Tile.cpp  Tile.h
src/opensmsg-ui/: UI-Notes.md
